--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
   },
   "dependencies": {
     "hono": "4.7.7",
+    "JSX": "^1.1.0",
+    "lucide-react": "^0.508.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.0.8",
     "@eslint/js": "9.25.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
@@ -36,6 +41,7 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0",
     "vite": "6.3.2",
+    "vitest": "^3.1.3",
     "wrangler": "4.12.0"
   },
   "scripts": {
