--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hono": "4.7.7",
     "JSX": "^1.1.0",
     "lucide-react": "^0.508.0",
+    "marked": "^15.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^7.6.0"
